<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">


    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detailToolbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/posterIv"
                android:contentDescription="@string/image_of_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="horizontal">

                    <ImageView
                        android:contentDescription="@string/image_of_movie_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_marginTop="5dp"
                            android:id="@+id/titleTv"
                            style="@style/movie_title" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/yearTv"
                                style="@style/movie_detail"
                                android:text="@string/date" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/yearTv"
                                android:layout_toEndOf="@+id/yearTv" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/ratingTv"
                                style="@style/movie_detail"
                                android:text="@string/rating"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@+id/ratingTv"
                                android:layout_toEndOf="@+id/ratingTv" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/synopsisTv"
                        style="@style/movie_detail"
                        android:text="@string/synopsis" />

                    <TextView style="@style/movie_overview" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/trailerTitle"
                        android:text="@string/trailers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_text_size" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trailerRecyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/card"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    style="@style/section"
                    android:orientation="vertical">

                    <TextView
                        style="@style/movie_detail"
                        android:text="@string/reviews"
                        android:textSize="@dimen/title_text_size"/>
                    <TextView
                        android:id="@+id/empty_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_reviews_available"/>
                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reviewsRecycler"
                        android:minHeight="128dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBtnFav"
        style="@style/floating_action_button"
        android:src="@drawable/ic_action_play_grayed_out"
        app:backgroundTint="@android:color/background_light"
        app:fabSize="normal"
        app:layout_anchor="@id/detailToolbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>